test su output grafico su index.html

--- a/index.html
+++ b/index.html
@@ -7,16 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- fontawesome -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> -->
-    <!-- <link rel="stylesheet" href="css/my_frame.css">
-    <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/my_frame.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
+    <h1 class="text-center">DUE PESI E DUE MISURE</h1>
+    <div class="container flexer around text-center">
+        <div class="plate-container">
+            <div id="left" class="plate long flexer col">
+          
+            </div>
+            <p>le zucchine corte pesano:</p>
+
+        </div>
+       <div class="plate-container">
+        <div id="right" class="plate short flexer col"></div>
+        <p>le zucchine lunghe pesano:</p>
+
+    </div>
+       </div>
+ 
+ 
 
     <!-- jQuery -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 
