sempre in test effetti grafici, qualche microcorrezione

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <h1 class="text-center">DUE PESI E DUE MISURE</h1>
     <div class="container flexer around text-center">
 
-        <div class="plate-container">
-            <p>le zucchine corte pesano:</p>
+        <div class="plate-container left">
+            <p>peso totale zucchine corte:</p>
 
             <div id="left" class="plate long flexer col">
           
             </div>
 
         </div>
-       <div class="plate-container">
-        <p>le zucchine lunghe pesano:</p>
+       <div class="plate-container right">
+        <p>peso totale zucchine lunghe:</p>
 
         <div id="right" class="plate short flexer col"></div>
 
